ag-128 fixed z-index

--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -58,9 +58,9 @@
     text-align: center;
     max-width: 1400px;
     width: 100%;
-    margin: 0px auto;
+    margin: 0 auto;
     position: absolute;
-    z-index: 1000;
+    z-index: 10;
     left: 50%;
     transform: translateX(-50%);
     top: -50px;
